# nr-common-metadata

./: README.md  build.sh  local_install.sh  setup.cfg
.github/workflows/: main.yaml  main.yml  pypi-publish.yml  tests.yml
nr-common-metadata/: setup.cfg
nr-common-metadata-model-builder/: setup.cfg
nr-common-metadata-model-builder/nr_common_metadata_model_builder/: __init__.py
nr-common-metadata/nr_common_metadata/: __init__.py
nr-common-metadata/nr_common_metadata/models/: nr_common_metadata_model.yaml
nr_common_metadata/: __init__.py
nr_common_metadata/models/: __init__.py  metadata.yaml
scripts/: extract.py
tests/: conftest.py  helpers.py  test_jsonschema.py  test_marshmallow.py  test_marshmallow_fields.py  test_validation_functions.py
