[metadata]
name = nr-common-metadata
version = attr: nr_common_metadata.__version__
description = NR common metadata types
long_description = file: README.md
long_description_content_type = text/markdown
keywords = National Repository common model Invenio
license = MIT
author = CESNET
author_email = bauer@cesnet.cz
platforms = any
url = https://github.com/NarodniRepozitar/nr-common-metadata
classifiers =
    Development Status :: 5 - Production/Stable

install_requires =
    python>=3.8
    isbnlib>=3.10.8
    IDUtils>=1.1.8
    python-stdnum>=1.16

[options.extras_require]
tests =
    pytest>=5.0.0
    pytest-cov>=2.10.1
    oarepo-mapping-includes<=1.2.0
    oarepo-multilingual>=2.5.0
    oarepo-taxonomies>=3.0.0a1
    pytest-runner>=5.3.0

[options.entry_points]
invenio_base.apps =
    oarepo_generated_ui = oarepo_generated_ui:OARepoGeneratedUI
oarepo_generated_ui.translations =
    messages = oarepo_generated_ui
invenio_assets.webpack =
    oarepo_generated_ui = oarepo_generated_ui.theme.webpack:generated_ui

[bdist_wheel]
universal = 1

[pycodestyle]
max-line-length = 82

[pydocstyle]
add_ignore = D401
