[metadata]
name = nr-common-metadata-model-builder
version = attr: nr_common_metadata_model_builder.__version__
description = OARepo model builder extension for NR common metadata records
long_description = file: README.md
long_description_content_type = text/markdown
keywords = National Repository common model builder plugin Invenio
license = MIT
author = CESNET
author_email = bauer@cesnet.cz
platforms = any
url = https://github.com/NarodniRepozitar/nr-common-metadata
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:

python_requires = >=3.9
zip_safe = False

install_requires =
    python>=3.8
    oarepo-model-builder>=0.9.24

# [options.extras_require]
# tests =
#     pytest>=5.0.0
#     pytest-cov>=2.10.1
#     pytest-runner>=5.3.0


[options.package_data]
* = *.yaml, *.json, *.json5

[options.entry_points]
oarepo.models =
    nr-common-metadata = nr_common_metadata_model_builder.models:nr_common_metadata

[bdist_wheel]
universal = 1

[pycodestyle]
max-line-length = 82

[pydocstyle]
add_ignore = D401
